--- a/packages/app-admin/src/styles/reset.scss
+++ b/packages/app-admin/src/styles/reset.scss
@@ -7,6 +7,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   margin: 0;
   padding: 0;
   border: 0;
+  font-size: 100%;
+  font: inherit;
   vertical-align: baseline; }
 
 /* HTML5 display-role reset for older browsers */
