--- a/packages/app-template-site/src/styles.scss
+++ b/packages/app-template-site/src/styles.scss
@@ -1,2 +1,3 @@
 @import "~@webiny/app-page-builder-theme/styles.scss";
 @import "~@webiny/app-form-builder-theme/styles.scss";
+@import "~@webiny/app-i18n/styles.scss";
