--- a/packages/cwp-template-admin/template/apps/admin/public/index.html
+++ b/packages/cwp-template-admin/template/apps/admin/public/index.html
@@ -14,7 +14,7 @@
     work correctly both with client-side routing and a non-root public URL.
     Learn how to configure a non-root public URL by running `npm run build`.
   -->
-  <title>Webiny Basic</title>
+  <title>Webiny admin</title>
 </head>
 <body>
 <noscript>
