--- a/packages/ui/src/styles.scss
+++ b/packages/ui/src/styles.scss
@@ -11,24 +11,48 @@ $webiny-theme-light-text-primary-on-background: rgba(0, 0, 0, 0.87);
 $webiny-theme-light-text-secondary-on-background: rgba(0, 0, 0, 0.54);
 $webiny-theme-light-text-hint-on-dark: rgba(255, 255, 255, 0.5);
 $webiny-theme-light-caret-down: url("data:image/svg+xml,%3Csvg%20width%3D%2210px%22%20height%3D%225px%22%20viewBox%3D%227%2010%2010%205%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%3E%0A%20%20%20%20%3Cpolygon%20id%3D%22Shape%22%20stroke%3D%22none%22%20fill%3D%22%23000000%22%20fill-rule%3D%22evenodd%22%20opacity%3D%220.54%22%20points%3D%227%2010%2012%2015%2017%2010%22%3E%3C%2Fpolygon%3E%0A%3C%2Fsvg%3E");
+$webiny-theme-light-error: red;
+$webiny-theme-light-on-error: lighten(red, 1);
+$webiny-theme-light-text-colors: (
+        dark: (
+                primary: rgba(black, .87),
+                secondary: rgba(black, .54),
+                hint: rgba(black, .38),
+                disabled: rgba(black, .38),
+                icon: rgba(black, .38)
+        ),
+        light: (
+                primary: white,
+                secondary: rgba(white, .7),
+                hint: rgba(white, .5),
+                disabled: rgba(white, .5),
+                icon: rgba(white, .5)
+        )
+);
+$webiny-theme-light-text-emphasis: (
+        high: .87,
+        medium: .6,
+        disabled: .38,
+);
 
 // webiny typography
 $webiny-theme-typography-font-family: "Source Sans Pro" !default;
 
-$mdc-theme-primary: $webiny-theme-light-primary;
-$mdc-theme-on-primary: $webiny-theme-light-on-primary;
-$mdc-theme-secondary: $webiny-theme-light-secondary;
-$mdc-theme-on-secondary: $webiny-theme-light-on-secondary;
-$mdc-theme-surface: $webiny-theme-light-surface;
-$mdc-theme-on-surface: $webiny-theme-light-on-surface;
-$mdc-theme-background: $webiny-theme-light-background;
-$mdc-theme-on-background: $webiny-theme-light-on-background;
-$mdc-theme-text-primary-on-background: $webiny-theme-light-text-primary-on-background !global;
-$mdc-theme-text-secondary-on-background: $webiny-theme-light-text-secondary-on-background;
-$mdc-theme-text-hint-on-dark: $webiny-theme-light-text-hint-on-dark;
-$mdc-typography-font-family: $webiny-theme-typography-font-family;
+@use "~@material/theme/variables" with (
+  $primary: $webiny-theme-light-primary,
+  $on-primary: $webiny-theme-light-on-primary,
+  $secondary: $webiny-theme-light-secondary,
+  $on-secondary: $webiny-theme-light-on-secondary,
+  $surface: $webiny-theme-light-surface,
+  $on-surface: $webiny-theme-light-on-surface,
+  $background: $webiny-theme-light-background,
+  $error: $webiny-theme-light-error,
+  $on-error: $webiny-theme-light-on-error,
+  $text-colors: $webiny-theme-light-text-colors,
+  $text-emphasis: $webiny-theme-light-text-emphasis,
+);
 
-@import "~material-components-web/material-components-web.scss";
+@import "~material-components-web/material-components-web";
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700");
 
 /*
