--- a/packages/app-admin/src/styles/material.scss
+++ b/packages/app-admin/src/styles/material.scss
@@ -1,6 +1,83 @@
-@import "theme";
+// webiny light theme
+$webiny-theme-light-primary: #fa5723 !default;
+$webiny-theme-light-secondary: #00ccb0 !default;
+$webiny-theme-light-background: #f2f2f2 !default;
+$webiny-theme-light-surface: #fff !default;
+$webiny-theme-light-on-primary: #ffffff !default;
+$webiny-theme-light-on-secondary: #ffffff !default;
+$webiny-theme-light-on-surface: #000000 !default;
+$webiny-theme-light-on-background: rgba(212, 212, 212, 0.5) !default;
+$webiny-theme-light-text-primary-on-background: rgba(0, 0, 0, 0.87);
+$webiny-theme-light-text-secondary-on-background: rgba(0, 0, 0, 0.54);
+$webiny-theme-light-text-hint-on-dark: rgba(255, 255, 255, 0.5);
+$webiny-theme-light-caret-down: url("data:image/svg+xml,%3Csvg%20width%3D%2210px%22%20height%3D%225px%22%20viewBox%3D%227%2010%2010%205%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%3E%0A%20%20%20%20%3Cpolygon%20id%3D%22Shape%22%20stroke%3D%22none%22%20fill%3D%22%23000000%22%20fill-rule%3D%22evenodd%22%20opacity%3D%220.54%22%20points%3D%227%2010%2012%2015%2017%2010%22%3E%3C%2Fpolygon%3E%0A%3C%2Fsvg%3E");
+$webiny-theme-light-error: red;
+$webiny-theme-light-on-error: lighten(red, 1);
+$webiny-theme-light-text-colors: (
+        dark: (
+                primary: rgba(black, .87),
+                secondary: rgba(black, .54),
+                hint: rgba(black, .38),
+                disabled: rgba(black, .38),
+                icon: rgba(black, .38)
+        ),
+        light: (
+                primary: white,
+                secondary: rgba(white, .7),
+                hint: rgba(white, .5),
+                disabled: rgba(white, .5),
+                icon: rgba(white, .5)
+        )
+);
+$webiny-theme-light-text-emphasis: (
+        high: .87,
+        medium: .6,
+        disabled: .38,
+);
+
+// webiny dark theme
+$webiny-theme-dark-primary: #fa5723 !default;
+$webiny-theme-dark-secondary: #00ccb0 !default;
+$webiny-theme-dark-background: #121212 !default;
+$webiny-theme-dark-surface: #242424 !default;
+$webiny-theme-dark-on-primary: #ffffff !default;
+$webiny-theme-dark-on-secondary: #ffffff !default;
+$webiny-theme-dark-on-surface: #ffffff !default;
+$webiny-theme-dark-on-background: rgba(255, 255, 255, 0.15) !default;
+$webiny-theme-dark-text-primary-on-background: rgba(255, 255, 255, 0.87);
+$webiny-theme-dark-text-secondary-on-background: rgba(255, 255, 255, 0.54);
+$webiny-theme-dark-text-hint-on-dark: rgba(255, 255, 255, 0.15);
+$webiny-theme-dark-caret-down: url("data:image/svg+xml,%3Csvg%20width%3D%2210px%22%20height%3D%225px%22%20viewBox%3D%227%2010%2010%205%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%3E%0A%20%20%20%20%3Cpolygon%20id%3D%22Shape%22%20stroke%3D%22none%22%20fill%3D%22%23FFFFFF%22%20fill-rule%3D%22evenodd%22%20opacity%3D%220.54%22%20points%3D%227%2010%2012%2015%2017%2010%22%3E%3C%2Fpolygon%3E%0A%3C%2Fsvg%3E");
+$webiny-theme-dark-error: red;
+$webiny-theme-dark-on-error: lighten(red, 1);
+$webiny-theme-dark-text-colors: (
+        dark: (
+                primary: rgba(black, .87),
+                secondary: rgba(black, .54),
+                hint: rgba(black, .38),
+                disabled: rgba(black, .38),
+                icon: rgba(black, .38)
+        ),
+        light: (
+                primary: white,
+                secondary: rgba(white, .7),
+                hint: rgba(white, .5),
+                disabled: rgba(white, .5),
+                icon: rgba(white, .5)
+        )
+);
+$webiny-theme-dark-text-emphasis: (
+        high: .87,
+        medium: .6,
+        disabled: .38,
+);
+
+// webiny typography
+$webiny-theme-typography-font-family: "Source Sans Pro" !default;
+
 
 // material variables
+// TODO these do not exist in @material anymore - remove from our code
 $mdc-theme-primary: $webiny-theme-light-primary;
 $mdc-theme-on-primary: $webiny-theme-light-on-primary;
 $mdc-theme-secondary: $webiny-theme-light-secondary;
@@ -14,10 +91,30 @@ $mdc-theme-text-secondary-on-background: $webiny-theme-light-text-secondary-on-b
 $mdc-theme-text-hint-on-dark: $webiny-theme-light-text-hint-on-dark;
 $mdc-typography-font-family: $webiny-theme-typography-font-family;
 
-@import "~material-components-web/material-components-web.scss";
+
+@use "~@material/theme/variables" with (
+  $primary: $webiny-theme-light-primary,
+  $on-primary: $webiny-theme-light-on-primary,
+  $secondary: $webiny-theme-light-secondary,
+  $on-secondary: $webiny-theme-light-on-secondary,
+  $surface: $webiny-theme-light-surface,
+  $on-surface: $webiny-theme-light-on-surface,
+  $background: $webiny-theme-light-background,
+  $error: $webiny-theme-light-error,
+  $on-error: $webiny-theme-light-on-error,
+  $text-colors: $webiny-theme-light-text-colors,
+  $text-emphasis: $webiny-theme-light-text-emphasis,
+);
+
+// import required fonts
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700");
+
+
+@import "~material-components-web/material-components-web";
 @import "material-theme-assignments.scss";
 
 body {
+  font-size: 16px;
   background-color: $mdc-theme-background;
   min-height: 100vh;
 
@@ -71,4 +168,9 @@ body.dark-theme {
 
   @import "~@material/textfield/mdc-text-field";
   @import "material-theme-assignments.scss";
+}
+
+a {
+  color: var(--webiny-theme-color-primary, #ee896b);
+  text-decoration: none;
 }
