--- a/apps/site/code/template/styles.scss
+++ b/apps/site/code/template/styles.scss
@@ -1,3 +1,3 @@
 @import "~@webiny/app-page-builder-theme/styles.scss";
 @import "~@webiny/app-form-builder-theme/styles.scss";
-@import "~@webiny/app-template-admin/styles.scss";
+@import "~@webiny/app-i18n/styles.scss";
