feat: RichTextEditor component

--- a/apps/admin/code/src/App.scss
+++ b/apps/admin/code/src/App.scss
@@ -34,3 +34,6 @@ $webiny-theme-typography-font-family: "Source Sans Pro";
 
 // Import admin app styles
 @import "~@webiny/app-admin/styles.scss";
+
+// Import `image` tool styles
+@import "~@webiny/app-admin/components/RichTextEditor/tools/image/styles.scss";
